--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,20 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #F5F5F5;
+}
+
+h1, h2, h3, h4, h5, p {
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 0;
 }
 
 code {
